[cpan] MEE: many updates, nearly version 0.0.6 now
git-svn-id: svn+ssh://faui2k3.org/var/lib/svn/moritz/cpan/Math-Expression-Evaluator@660 addfbb1e-f4f9-0310-b6f0-bccd0f9b8dc6

--- a/META.yml
+++ b/META.yml
@@ -1,9 +1,9 @@
 ---
 name: Math-Expression-Evaluator
-version: 0.0.1
+version: 0.0.5
 author:
   - Moritz Lenz
-abstract: parses and evaluates mathematic expressions
+abstract: parses, evaluates and compiles mathematic expressions
 license: perl
 resources:
   license: http://dev.perl.org/licenses/
@@ -11,10 +11,11 @@ requires:
   Carp: 0
   Math::Trig: 0
   Regexp::Common: 0
+  Data::Dumper: 0
 provides:
   Math::Expression::Evaluator:
     file: lib/Math/Expression/Evaluator.pm
-    version: 0.0.1
+    version: 0.0.5
   Math::Expression::Evaluator::Lexer:
     file: lib/Math/Expression/Evaluator/Lexer.pm
 generated_by: Module::Build version 0.2808
